# AICARDGAMES

./: .gitignore  PLAN_FOR_REVIEW.txt  TEMPLATE_REQUIREMENTS.txt  nixpacks.toml  pyproject.toml  railway.toml  requirements-training.txt  requirements-web.txt  requirements.txt  web_server.py
agents/heuristic/: blackjack_basic_strategy.py
core/: action_space.py  card.py  state_encoder.py  types.py
env_builder/: build.py  injector.py  parser.py  validator.py
envs/: base_env.py  registry.py
envs/gambling/: baccarat_env.py  blackjack_env.py  poker_env.py
evaluation/: elo.py
models/: adapter.py  backbone.py  full_agent.py  policy_value_head.py
public/: index.html
pvp_server/: room_manager.py  ws_handler.py
scripts/: train_category.py
tests/: test_action_space.py  test_card.py  test_env_builder.py  test_envs_gambling.py  test_models.py  test_state_encoder.py
training/: curriculum.py  multi_task_trainer.py  ppo.py  reward_normalizer.py  self_play.py
