[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "aicardgames"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    # Core ML
    "torch>=2.3.0",
    "numpy>=1.26.0",
    # Game environments
    "rlcard>=1.2.0",
    "open_spiel>=1.4.0",
    "pettingzoo>=1.24.0",
    "gymnasium>=0.29.0",
    # Experiment tracking
    "wandb>=0.17.0",
    # Utilities
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "rich>=13.0",         # CLI table rendering for human_play.py
    "einops>=0.8.0",      # Tensor reshaping in transformer
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "envs*", "models*", "training*", "evaluation*", "agents*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
